# cuuid

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-push.yml
benchmarks/: bench_uuid.py
cuuid/: __init__.py  __main__.py  cuuid4.c  uuid.pxd  uuid.pyi  uuid.pyx  uuid4.pyi  uuid4.pyx
include/: tohex.pxd  uuid4.pxd
tests/: test_uuid.py
